<resources>
    <string name="app_name">Fitrack</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Menu items -->
    <string name="menu_tracking">Tracking</string>
    <string name="menu_tracks">Tracks list</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_track_start">Start</string>
    <string name="menu_track_stop">Stop</string>

    <string name="menu_track_delete">Delete</string>
    <string name="menu_track_tag">Set tag</string>

    <string name="nav_open_drawer">open</string>
    <string name="nav_close_drawer">close</string>

    <string name="tag_delete">Delete</string>

    <string name="no_tag">No tag</string>

    <string name="title_tracking">Tracking</string>
    <string name="title_stats">Statistics</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_settings">Settings</string>
    <string name="title_select_tag">Select tag</string>

    <string name="notification_title">Fitrack</string>
    <string name="notification_text">Tracking enabled</string>

    <string name="settings_tracking">Tracking</string>
    <string name="settings_tracking_time_enabled">Tracking time enabled</string>
    <string name="settings_start_tracking_time">Start tracking time</string>
    <string name="settings_end_tracking_time">End tracking time</string>


    <string name="set_tag">Set tag</string>
    <string name="stats_filters">Filters</string>

    <string name="stats_filters_param">Parameter</string>
    <string name="stats_filters_time_step">Time step</string>
    <string name="stats_filters_period">Period</string>
    <string name="stats_filters_tag">Tag</string>

    <string name="create_new_tag_hint">New tag</string>


    <string name="need_autostart_string">The app must be in autostart white list. Please, do it manually in settings.</string>

</resources>
