<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TableRow android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_filters_param"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_param"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:entries="@array/stats_filter_type" />
    </TableRow>

    <TableRow android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_filters_time_step"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_time_step"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </TableRow>

    <TableRow android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_filters_period"
            android:textSize="18sp" />

        <bogomolov.aa.fitrack.features.shared.ReselectableSpinner
            android:id="@+id/spinner_period"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:entries="@array/track_time_filter" />
    </TableRow>

    <TableRow android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_filters_tag"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_tag"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </TableRow>

</TableLayout>
